rkl/css/default.scss
---
---

$colour-primary: #008720;
@import "sage-base";


.text-purple {
  color: $colour-primary;
}

.with-background {
  @include cover-page('../img/hero-01.jpg?cb=1');
}

.page-cta {
  @include cover-page('../img/cta.jpg?cb=1');
}

#flip-growth-man {
  @include flip-style(#f04b2d, '../img/growth.jpg?cb=1');
}

#flip-digital-man {
  @include flip-style(#6ea246, '../img/digital.jpg?cb=1');
}

#flip-flexibility-man {
  @include flip-style(#0e68a3, '../img/flexibility.jpg?cb=1');
}

#flip-productivity-man {
  @include flip-style(#02a9a4, '../img/productivity.jpg?cb=1');
}
.button-yellow {
  background: #6ea246;

  &:hover {
    background: linear-gradient(90deg, rgba(255, 255, 255, 0.07), rgba(255, 255, 255, 0.15)), lighten(#6ea246, 10%);

  }

  &:active,
  &:focus {
    background: linear-gradient(90deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.15)), darken(#6ea246, 10%);

  }
}

.flickity-page-dots .dot {
  background: #6ea246;
  border: 2px solid #6ea246;
}

.flickity-page-dots .dot.is-selected {
  background: white;
  border: 2px solid #6ea246;
}

.flickity-button {
  background: #f04b2d;

  &:hover {
    background: #f04b2d;
  }


  &:focus {
    outline: none;
    background: #6ea246;
    box-shadow: 0 0 0 0 #6ea246;
  }
}

.callout {
  background: #6ea246 !important;
  color: #6ea246;

}

.title-color {
  color:#3F4444;


}

.title-color-white{
  color:#ffffff;
}

.quote-color {
  color:#6ea246;

}
.tabs {
  .column {
    &.active {
      background: #f04b2d;

    }
  }
}

.ui.tiny.header {
  font-size: 1.1em;
}

p {
  font-size:1.1em;
}

h4 {
  font-size: 1.2em;
}

h1{
  text-align: left;

  .k3cover {
    text-align:center;
  }

}

h3{
  text-align: left;
  font-size: 1.5rem;
}

.ui.list>.item .header {
  font-size: 1.2rem;
  line-height: normal;
}

.ui.list>.item .description {
   font-size: 1.2rem;
  line-height: normal;
}

.quote-background {
  background-color: #adb5bd;
}

.ui[class*="eight column"].grid>.column:not(.row), .ui[class*="eight column"].grid>.row>.column {
  width: 40%;
}

.logos-container img {
  height: 75px;
}

